anomaly_detection.ipynb

--- a/anomaly_detection.ipynb
+++ b/anomaly_detection.ipynb
@@ -37,7 +37,7 @@
     "  Journal of the American Statistical Association, 88(424), 1273-1283.\n",
     "  https://doi.org/10.1080/01621459.1993.10476408\n",
     "\n",
-    "Author: [Your Name]\n",
+    "Author: [Anthony Melo]\n",
     "\"\"\"\n",
     "\n",
     "# === 1. Import libraries ===\n",
@@ -67,7 +67,7 @@
     "\n",
     "# === 3. Load data ===\n",
     "# Replace the path with your own 1-minute K-line dataset\n",
-    "df = pd.read_csv(\"/Users/anthonymarceldebarrosbarbalhomelo/Downloads/TRUMPUSDT_data.csv\")\n",
+    "df = pd.read_csv(\"")\n",
     "\n",
     "# Extract closing prices and timestamps\n",
     "close_price = df[\"Close price\"].values\n",
